--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'net.bramp.ffmpeg:ffmpeg:0.7.0'
+	implementation 'com.auth0:java-jwt:4.2.1'
 	runtimeOnly 'mysql:mysql-connector-java'
 	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
