--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Dependencies
     runs-on: ubuntu-latest
-    permissions: # The Dependency Submission API requires write permission
+    permissions: 
       contents: write
     steps:
       - name: 'Checkout Repository'
