--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Run snapshot action
         uses: mikepenz/gradle-dependency-submission@v0.8.5
         with:
-          gradle-build-module: ":app"
+          gradle-build-module: ":hwangingyu"
