--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,18 @@ plugins {
 	id 'java'
 }
 
-pluginManagement{
-	repositories{
-    	mavenCentral()
-        gradlePluginPortal()
-    }
-}
 group = 'com.hig'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	gradlePluginPortal()
 }
 
 ext {
    set('snakeyaml.version','1.32')
+   set('json-smart.version','2.4.10')
 }
 
 dependencies {
