--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run snapshot action
-        uses: mikepenz/gradle-dependency-submission@0.8.6
+        uses: mikepenz/gradle-dependency-submission@v0.8.6
         with:
           use-gradlew: false
           gradle-build-module: |-
