add db driver and url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.profiles.include= SECRET, DB
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.username= DB
 #spring.datasource.password= DB
-#spring.datasource.url=DB
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?serverTimezone=Asia/Seoul
 spring.thymeleaf.cache=false
 
 server.ssl.key-store=hig-keystore.p12
