--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ server.tomcat.accesslog.directory=log
 server.tomcat.accesslog.pattern=%h %a %u %t "%r" %s %b %D
 
 
-# oauth.kakao.clientid = SECRET
-# oauth.kakao.secret = SECRET
-#  captcha.secret = SECRET
-# jwt.secret = SECRET
+oauth.kakao.clientid = SECRET
+oauth.kakao.secret = SECRET
+captcha.secret = SECRET
+jwt.secret = SECRET
 
