--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run snapshot action
         uses: mikepenz/gradle-dependency-submission@v0.8.6
         with:
-          use-gradlew: false
+          use-gradlew: true
           gradle-build-module: |-
             :
           gradle-build-configuration: |-
